--- a/1-analyses/germband-extension/germband.Rmd
+++ b/1-analyses/germband-extension/germband.Rmd
@@ -496,13 +496,118 @@ ggsave("2-plots/gb_time_tf_buck_md_start_by_stock.png", width = 7, height = 12)
 ggsave("2-plots/gb_time_tf_buck_md_start_by_stock.svg", width = 7, height = 12)
 ```
 
-## Tests
+## Statistical tests
 
 ```{r tests}
-# TODO: Create the relevant tests for testing relevant differences
-wilcox.test(
-  gblong[(gblong$status == "tf_buck" & gblong$stock != "prd" & gblong$zygosity == "homozygote"),]$time,
-  gblong[(gblong$status == "md_start" & gblong$stock != "prd" & gblong$zygosity == "homozygote"),]$time,
-  paired = TRUE
-)
+# Create data frame for tests
+tests <- data.frame()
+
+# Contrasts of single variables within stocks (het vs hom)
+for (stock in unique(gblong$stock)) {
+  
+  if (stock == "wt") { next }
+  
+  for (status in unique(gblong$status)) {
+    
+    for (value in c("gb_pct", "time")) {
+      
+      het = gblong[(gblong$status == status & gblong$stock == stock & gblong$zygosity == "heterozygote"), value]
+      hom = gblong[(gblong$status == status & gblong$stock == stock & gblong$zygosity == "homozygote"), value]
+      
+      test = wilcox.test(het, hom, paired = FALSE)
+      pvalue = test$p.value
+      statistic = test$statistic
+      delta = mean(het) - mean(hom)
+      
+      test_row = c(
+        contrast = "het vs hom",
+        stock = stock,
+        zygosity = "-",
+        status = status,
+        value = value,
+        delta = sprintf("%.1f", delta),
+        significant = pvalue < 0.05,
+        pvalue = sprintf("%.6f", pvalue),
+        statistic = sprintf("%s=%s", names(statistic), statistic),
+        paired = FALSE
+      )
+      
+      tests <- rbind(tests, as.data.frame(t(test_row)))
+      
+    }
+  }
+}
+
+# Contrasts between variables within zygosity (buck vs md)
+for (stock in unique(gblong$stock)) {
+  
+  for (zygosity in unique(gblong$zygosity)) {
+    
+    for (value in c("gb_pct", "time")) {
+      
+      if (stock == "wt" & zygosity != "wildtype") { next }
+      
+      if (stock != "wt" & zygosity == "wildtype") { next }
+      
+      # Note: with low n and all values from one contrast higher or lower than the other, pvalues might be identical
+      buck = gblong[(gblong$status == "tf_buck" & gblong$stock == stock & gblong$zygosity == zygosity), value]
+      md = gblong[(gblong$status == "md_start" & gblong$stock == stock & gblong$zygosity == zygosity), value]
+      
+      test = wilcox.test(buck, md, paired = TRUE)
+      pvalue = test$p.value
+      statistic = test$statistic
+      delta = mean(buck) - mean(md)
+      
+      test_row = c(
+        contrast = "buck vs md",
+        stock = stock,
+        zygosity = zygosity,
+        status = "-",
+        value = value,
+        delta = sprintf("%.1f", delta),
+        significant = pvalue < 0.05,
+        pvalue = sprintf("%.6f", pvalue),
+        statistic = sprintf("%s=%s", names(statistic), statistic),
+        paired = TRUE
+      )
+      
+      tests <- rbind(tests, as.data.frame(t(test_row)))
+      
+    }
+  }
+}
+
+# Contrasts between variables within zygosity but batch stocks (buck vs md)
+for (zygosity in c("heterozygote", "homozygote")) {
+  
+  for (value in c("gb_pct", "time")) {
+    
+    # Note: prd excluded because CF formation is not prevented
+    buck = gblong[(gblong$status == "tf_buck" & gblong$stock != "prd" & gblong$zygosity == zygosity), value]
+    md = gblong[(gblong$status == "md_start" & gblong$stock != "prd" & gblong$zygosity == zygosity), value]
+    
+    test = wilcox.test(buck, md, paired = TRUE)
+    pvalue = test$p.value
+    statistic = test$statistic
+    delta = mean(buck) - mean(md)
+    
+    test_row = c(
+      contrast = "buck vs md",
+      stock = "btd+eve",
+      zygosity = zygosity,
+      status = "-",
+      value = value,
+      delta = sprintf("%.1f", delta),
+      significant = pvalue < 0.05,
+      pvalue = sprintf("%.6f", pvalue),
+      statistic = sprintf("%s=%s", names(statistic), statistic),
+      paired = TRUE
+    )
+    
+    tests <- rbind(tests, as.data.frame(t(test_row)))
+  }
+}
+
+tests
+write.csv(tests, file = "tests.csv", row.names = FALSE)
 ```
