--- a/1-analyses/mitotic-expansion/md_expansion.Rmd
+++ b/1-analyses/mitotic-expansion/md_expansion.Rmd
@@ -75,6 +75,7 @@ for (tabfile in files) {
 
 # Save data frame to file
 write.csv(md_expansion, file = "md_expansion.csv", row.names = FALSE)
+
 ```
 
 ## Merge datasets
@@ -92,11 +93,12 @@ germband <- read.csv("../germband-extension/germband.csv")
 gb_extension <- cbind(gb_extension, germband[, c("time_tf_buck", "time_tf_deep")])
 
 # Merge mitotic landmarks with datasets
-mitotic <- merge(md_expansion, gb_extension, by = "embryo", all.x = TRUE)
+mitotic <- merge(gb_extension, md_expansion, by = "embryo", all.x = TRUE)
 mitotic <- merge(mitotic, datasets, by = "embryo", all.x = TRUE)
 
 # Properly convert column types before any calculations
 mitotic <- as.data.frame(lapply(mitotic, type.convert, as.is = FALSE))
+
 ```
 
 ## Calculate time and percentages
@@ -116,6 +118,7 @@ mitotic$gb_pct_md_split <- 100 - ((mitotic$gb_pos_md_split / mitotic$size) * 100
 # Calculate MD time after gastrulation (min)
 mitotic$time_md_start <- ((mitotic$frame_md_start - mitotic$frame_gastr) * mitotic$timestep) / 60
 mitotic$time_md_split <- ((mitotic$frame_md_split - mitotic$frame_gastr) * mitotic$timestep) / 60
+
 ```
 
 ## Create long format data frame
@@ -131,11 +134,9 @@ longvars <- c(
   "zygosity",
   "size",
   "gb_pct_tf_buck",
-  "gb_pct_tf_deep",
   "gb_pct_md_start",
   "gb_pct_md_split",
   "time_tf_buck",
-  "time_tf_deep",
   "time_md_start",
   "time_md_split"
 )
@@ -145,20 +146,18 @@ mdlong <- reshape(
   varying = list(
     c(
       "gb_pct_tf_buck",
-      "gb_pct_tf_deep",
       "gb_pct_md_start",
       "gb_pct_md_split"
     ),
     c(
       "time_tf_buck",
-      "time_tf_deep",
       "time_md_start",
       "time_md_split"
     )
   ),
   v.names = c("gb_pct", "time"),
   timevar = "status",
-  times = c("tf_buck", "tf_deep", "md_start", "md_split"),
+  times = c("tf_buck", "md_start", "md_split"),
   direction = "long"
 )
 
@@ -175,6 +174,7 @@ rownames(mdlong) <- 1:nrow(mdlong)
 # Save both data frames to file
 write.csv(mitotic, file = "mitotic.csv", row.names = FALSE)
 write.csv(mdlong, file = "mdlong.csv", row.names = FALSE)
+
 ```
 
 ## Calculate mean and standard deviation
@@ -182,9 +182,15 @@ write.csv(mdlong, file = "mdlong.csv", row.names = FALSE)
 Create data frame with descriptive statistics for all the different samples and variables.
 
 ```{r calculate-mean-sd}
-
-# Automatically aggregate data by columns
-stats <- aggregate(cbind(gb_pct, time) ~ stock + zygosity + status, mdlong, function(x) c(count = length(x), mean = mean(x), sd = sd(x)))
+# Automatically aggregate data by columns for MD statuses only
+stats <- aggregate(
+  cbind(gb_pct, time) ~ stock + zygosity + status,
+  mdlong[mdlong$status %in% c("md_start", "md_split"), ],
+  function(x) c(
+    count = length(x),
+    mean = mean(x),
+    sd = sd(x))
+  )
 
 # Makes column names nicer
 stats <- do.call(data.frame, stats)
@@ -196,16 +202,41 @@ rownames(stats) <- 1:nrow(stats)
 # Print and save data frame
 stats
 write.csv(stats, file = "stats.csv", row.names = FALSE)
+
 ```
 
-## Descriptive plots
+## Exploratory plots
 
-We want to identify the difference between the cephalic furrow and the ectopic folds in the percentage of germ band extension, and the timing of formation after gastrulation.
+For `md_start` (initial mitotic expansion) and `md_split` (first cell division).
 
-First, we plot the germ band extension (%) for homozygotes and heterozygotes at two different moments: initial infolding/buckling (buck) and deepest point (deep).
+### Time of mitotic events after gastrulation by stock (cols) and status (rows)
 
-```{r plot-gb-pct}
-ggplot(gblong, aes(stock, gb_pct, fill = zygosity)) +
+The plot suggests that mitotic expansion and division is delayed in btd and eve homozygotes and eve heterozygotes, and is probably faster in prd heterozygotes and homozygotes.
+
+```{r plot-md-time-by-stock-status}
+ggplot(mdlong[mdlong$status %in% c("md_start", "md_split"), ], aes(stock, time, fill = zygosity)) +
+  geom_boxplot(aes(color = zygosity), show.legend = TRUE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
+  geom_point(alpha = 0.8, size = 3, show.legend = TRUE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
+  scale_fill_manual(values = c("#cc79a7", "#56b4e9", "#e69f03")) +
+  scale_color_manual(values = c("#cc79a7", "#56b4e9", "#e69f03")) +
+  labs(x = "stocks", y = "time after gastrulation (min)") +
+  facet_grid(rows = vars(status), cols = vars(stock), scales = "free_x") +
+  theme_classic(base_family = "DejaVu Sans") +
+  theme(text = element_text(size = 35),
+        title = element_text(size = 15),
+        legend.text = element_text(size = 15),
+        strip.background = element_blank(),
+        panel.background = element_rect(colour = "black", size = 1))
+ggsave("2-plots/md_time_all_by_stock_status.png", width = 15, height = 7)
+ggsave("2-plots/md_time_all_by_stock_status.svg", width = 15, height = 7)
+```
+
+### Percentage of germ band extension by stock (cols) and status (rows)
+
+The plot suggests that mitotic expansion and division happens is delayed relative to germ band extension in btd homozygotes.
+
+```{r plot-gb-pct-by-stock-status}
+ggplot(mdlong[mdlong$status %in% c("md_start", "md_split"),], aes(stock, gb_pct, fill = zygosity)) +
   geom_boxplot(aes(color = zygosity), show.legend = TRUE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
   geom_point(alpha = 0.8, size = 3, show.legend = TRUE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
   scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
@@ -219,144 +250,69 @@ ggplot(gblong, aes(stock, gb_pct, fill = zygosity)) +
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1)
         )
-ggsave("2-plots/gb_pct.png", width = 15, height = 12)
-ggsave("2-plots/gb_pct.svg", width = 15, height = 12)
+ggsave("2-plots/gb_pct_all_by_stock_status.png", width = 15, height = 7)
+ggsave("2-plots/gb_pct_all_by_stock_status.svg", width = 15, height = 7)
 ```
 
-Second, we plot the time after gastrulation (min).
+### Time of mitotic events after gastrulation by status (cols) and stock (rows)
 
-```{r plot-gb-time}
-ggplot(gblong, aes(stock, time, fill = zygosity)) +
-  geom_boxplot(aes(color = zygosity), show.legend = TRUE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
-  geom_point(alpha = 0.8, size = 3, show.legend = TRUE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
-  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  labs(x = "stocks", y = "time after gastrulation (min)") +
-  facet_grid(rows = vars(status), cols = vars(stock), scales = "free_x") +
-  theme_classic(base_family = "DejaVu Sans") +
-  theme(text = element_text(size = 35),
-        title = element_text(size = 15),
-        legend.text = element_text(size = 15),
-        strip.background = element_blank(),
-        panel.background = element_rect(colour = "black", size=1)
-        )
-ggsave("2-plots/gb_time.png", width = 15, height = 12)
-ggsave("2-plots/gb_time.svg", width = 15, height = 12)
-```
+The plot suggests that buckling in btd, eve, and prd homozygotes happen after the initial mitotic expansion, in contrast to the respective heterozygotes.
 
-## Main figure plots
-
-The above are nice descriptive plots. But for the figure, the most interesting is the initial buckling/infolding relative to GB position and time after gastrulation.
-
-Plot germ band extension percentage at the moment of buckling/infolding:
-
-```{r plot-gb-pct-buck}
-ggplot(gblong[gblong$status == "tf_buck",], aes(stock, gb_pct, fill = zygosity)) +
+```{r plot-md-time-by-status-stock}
+ggplot(mdlong, aes(status, time, fill = zygosity)) +
   geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
   geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
-  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  labs(x = "stocks", y = "germ band extension (%)") +
-  facet_grid(cols = vars(stock), scales = "free") +
-  theme_classic(base_family = "DejaVu Sans") +
-  theme(text = element_text(size = 35),
-        strip.background = element_blank(),
-        panel.background = element_rect(colour = "black", size=1)
-        )
-ggsave("2-plots/gb_pct_buck.png", width = 12, height = 4)
-ggsave("2-plots/gb_pct_buck.svg", width = 12, height = 4)
-```
-
-Plot the time after gastrulation at the moment of buckling/infolding:
-
-```{r plot-gb-time-buck}
-ggplot(gblong[gblong$status == "tf_buck",], aes(stock, time, fill = zygosity)) +
-  geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
-  geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
-  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  labs(x = "stocks", y = "time after gastrulation (min)") +
-  facet_grid(cols = vars(stock), scales = "free") +
-  theme_classic(base_family = "DejaVu Sans") +
-  theme(text = element_text(size = 35),
-        strip.background = element_blank(),
-        panel.background = element_rect(colour = "black", size=1)
-        )
-ggsave("2-plots/gb_time_buck.png", width = 12, height = 4)
-ggsave("2-plots/gb_time_buck.svg", width = 12, height = 4)
-```
-
-Plot the germ band extension at the time of buckling/infolding and mitotic domain expansion:
-
-```{r plot-gb-time-buck}
-ggplot(gblong[(gblong$status %in% c("tf_buck", "md_start") & gblong$stock != "prd"),], aes(status, gb_pct, fill = zygosity)) +
-  geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
-  #geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
-  geom_point(alpha = 0.8, size = 3, show.legend = FALSE) +
-  geom_line(aes(group = embryo)) +
-  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  labs(x = "status", y = "germ band extension (%)") +
-  facet_grid(cols = vars(zygosity), scales = "free") +
-  theme_classic(base_family = "DejaVu Sans") +
-  theme(text = element_text(size = 35),
-        strip.background = element_blank(),
-        panel.background = element_rect(colour = "black", size=1)
-        )
-ggsave("2-plots/gb_pct_tf_buck_md_start.png", width = 9, height = 4)
-ggsave("2-plots/gb_pct_tf_buck_md_start.svg", width = 9, height = 4)
-```
-
-Plot the time after gastrulation at the time of buckling/infolding and mitotic domain expansion:
-
-```{r plot-gb-time-buck}
-ggplot(gblong[(gblong$status %in% c("tf_buck", "md_start") & gblong$stock != "prd"),], aes(status, time, fill = zygosity)) +
-  geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
-  #geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
-  geom_point(alpha = 0.8, size = 3, show.legend = FALSE) +
-  geom_line(aes(group = embryo)) +
+  #geom_line(aes(group = embryo)) +
   scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
   scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
   labs(x = "status", y = "time after gastrulation (min)") +
-  facet_grid(cols = vars(zygosity), scales = "free") +
+  #facet_grid(cols = vars(zygosity), scales = "free") +
+  facet_grid(cols = vars(status), rows = vars(stock), scales = "free_x") +
+  #facet_grid(rows = vars(stock), scales = "free") +
   theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1)
         )
-ggsave("2-plots/gb_time_tf_buck_md_start.png", width = 9, height = 4)
-ggsave("2-plots/gb_time_tf_buck_md_start.svg", width = 9, height = 4)
+ggsave("2-plots/md_time_all_by_status_stock.png", width = 10, height = 12)
+ggsave("2-plots/md_time_all_by_status_stock.svg", width = 10, height = 12)
 ```
+### Percentage of germ band extension by status (cols) and stock (rows)
 
-Plot the germ band percentage vs buckling/infolding and md expansion, but faceted by status:
+The plot suggests that buckling in btd, eve, and prd homozygotes is delayed relative to the initial mitotic expansion, in contrast to the respective heterozygotes.
 
-```{r plot-gb-time-buck}
-ggplot(gblong[(gblong$status %in% c("tf_buck", "md_start") & gblong$stock != "prd"),], aes(zygosity, gb_pct, fill = zygosity)) +
+```{r plot-gb-pct-by-status-stock}
+ggplot(mdlong, aes(status, gb_pct, fill = zygosity)) +
   geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
-  geom_point(alpha = 0.8, size = 2, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 4)) +
-  #geom_point(alpha = 0.8, size = 3, show.legend = TRUE) +
+  geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
   #geom_line(aes(group = embryo)) +
   scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
   scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  labs(x = "zygosity", y = "germ band extension (%)") +
-  facet_grid(cols = vars(status), scales = "free") +
+  labs(x = "status", y = "germ band extension (%)") +
+  #facet_grid(cols = vars(zygosity), scales = "free") +
+  facet_grid(cols = vars(status), rows = vars(stock), scales = "free_x") +
+  #facet_grid(rows = vars(stock), scales = "free") +
   theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1)
         )
-ggsave("2-plots/gb_pct_tf_buck_md_start_facet_status.png", width = 6, height = 4)
-ggsave("2-plots/gb_pct_tf_buck_md_start_facet_status.svg", width = 6, height = 4)
+ggsave("2-plots/gb_pct_all_by_status_stock.png", width = 10, height = 12)
+ggsave("2-plots/gb_pct_all_by_status_stock.svg", width = 10, height = 12)
 ```
 
-Plot the time after gastrulation vs buckling/infolding and md expansion, but faceted by status:
+## Main plots
 
-```{r plot-gb-time-buck}
-ggplot(gblong[(gblong$status %in% c("tf_buck", "md_start") & gblong$stock != "prd"),], aes(zygosity, time, fill = zygosity)) +
+Comparison between `tf_buck` and `md_start`, the most informative values, excluding data from `prd` since cephalic furrow formation is not prevented in homozygote embryos.
+
+### Time of mitotic expansion vs ectopic folding by status (cols)
+
+The plot shows how ectopic folding is delayed relative to the cephalic furrow, and how the timing of mitotic expansion does not change between different zygosities. Comparing the timing of ectopic folding with mitotic expansion in homozygotes indicates that the latter precedes the former.
+
+```{r plot-md-time-tf-buck-vs-md-start-by-status}
+ggplot(mdlong[(mdlong$status %in% c("tf_buck", "md_start") & mdlong$stock != "prd"),], aes(zygosity, time, fill = zygosity)) +
   geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
-  geom_point(alpha = 0.8, size = 2, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 4)) +
-  #geom_point(alpha = 0.8, size = 3, show.legend = TRUE) +
-  #geom_line(aes(group = embryo)) +
+  geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 5)) +
   scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
   scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
   labs(x = "zygosity", y = "time after gastrulation (min)") +
@@ -366,90 +322,75 @@ ggplot(gblong[(gblong$status %in% c("tf_buck", "md_start") & gblong$stock != "pr
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1)
         )
-ggsave("2-plots/gb_time_tf_buck_md_start_facet_status.png", width = 6, height = 4)
-ggsave("2-plots/gb_time_tf_buck_md_start_facet_status.svg", width = 6, height = 4)
+ggsave("2-plots/md_time_tf_buck_vs_md_start_by_status.png", width = 10, height = 6)
+ggsave("2-plots/md_time_tf_buck_vs_md_start_by_status.svg", width = 10, height = 6)
 ```
+### Percentage of germ band extension at mitotic expansion vs ectopic folding by status (cols)
 
-## Supplementary plots
+Although heterozygote cephalic furrow is slightly delayed compared to wildtype, it happens at the same percentage of germ band extension. This suggests that germ band extension is a good relative measure for developmental events.
 
-The deepest point plots are not super informative and will go into the supplementary.
+This plot shows that ectopic folding is very much delayed relative to germ band extension in homozygotes, and mitotic expansion is unchanged. This means that mitotic expansion precedes ectopic buckling.
 
-```{r plot-gb-pct-deep}
-ggplot(gblong[gblong$status == "tf_deep",], aes(stock, gb_pct, fill = zygosity)) +
+```{r plot-gb-pct-tf-buck-vs-md-start-by-status}
+ggplot(mdlong[(mdlong$status %in% c("tf_buck", "md_start") & mdlong$stock != "prd"),], aes(zygosity, gb_pct, fill = zygosity)) +
   geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
-  geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
+  geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 4)) +
   scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
   scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  labs(x = "stocks", y = "germ band extension (%)") +
-  facet_grid(cols = vars(stock), scales = "free") +
-  theme_classic(base_family = "DejaVu Sans") +
-  theme(text = element_text(size = 35),
-        #title = element_text(size = 15),
-        #legend.text = element_text(size = 15),
-        strip.background = element_blank(),
-        panel.background = element_rect(colour = "black", size=1)
-        )
-ggsave("2-plots/gb_pct_deep.png", width = 12, height = 4)
-ggsave("2-plots/gb_pct_deep.svg", width = 12, height = 4)
-```
-
-```{r plot-gb-time-deep}
-ggplot(gblong[gblong$status == "tf_deep",], aes(stock, time, fill = zygosity)) +
-  geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
-  geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
-  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  labs(x = "stocks", y = "time after gastrulation (min)") +
-  facet_grid(cols = vars(stock), scales = "free") +
-  theme_classic(base_family = "DejaVu Sans") +
-  theme(text = element_text(size = 35),
-        #title = element_text(size = 15),
-        #legend.text = element_text(size = 15),
-        strip.background = element_blank(),
-        panel.background = element_rect(colour = "black", size=1)
-        )
-ggsave("2-plots/gb_time_deep.png", width = 12, height = 4)
-ggsave("2-plots/gb_time_deep.svg", width = 12, height = 4)
-```
-
-```{r plot-gb-pct-tf-buck-md-start-by-stock}
-ggplot(gblong[gblong$status %in% c("tf_buck", "md_start"),], aes(status, gb_pct, fill = zygosity)) +
-  geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
-  geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
-  #geom_line(aes(group = embryo)) +
-  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  labs(x = "status", y = "germ band extension (%)") +
-  #facet_grid(cols = vars(zygosity), scales = "free") +
-  facet_grid(cols = vars(status), rows = vars(stock), scales = "free_x") +
-  #facet_grid(rows = vars(stock), scales = "free") +
+  labs(x = "zygosity", y = "germ band extension (%)") +
+  facet_grid(cols = vars(status), scales = "free") +
   theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1)
         )
-ggsave("2-plots/gb_pct_tf_buck_md_start_by_stock.png", width = 7, height = 12)
-ggsave("2-plots/gb_pct_tf_buck_md_start_by_stock.svg", width = 7, height = 12)
+ggsave("2-plots/gb_pct_tf_buck_vs_md_start_by_status.png", width = 10, height = 6)
+ggsave("2-plots/gb_pct_tf_buck_vs_md_start_by_status.svg", width = 10, height = 6)
 ```
+### Time of mitotic expansion vs ectopic folding by zygosity (cols)
 
-```{r plot-gb-time-tf-buck-md-start-by-stock}
-ggplot(gblong[gblong$status %in% c("tf_buck", "md_start"),], aes(status, time, fill = zygosity)) +
+While the previous plots are informative, it is important to determine if the mitotic expansion precedes ectopic folding per individual embryos. To visualize we changed the facet to zygosity and connect the dots of the same embryos.
+
+The plot shows that in heterozygotes, cephalic furrow formation always precedes mitotic expansion, but that in homozygotes it's the reverse, mitotic expansion always precedes ectopic folding.
+
+```{r plot-md-time-tf-buck-vs-md-start-by-zygosity}
+ggplot(mdlong[(mdlong$status %in% c("tf_buck", "md_start") & mdlong$stock != "prd"),], aes(status, time, fill = zygosity)) +
   geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
-  geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
-  #geom_line(aes(group = embryo)) +
+  geom_point(alpha = 0.8, size = 3, show.legend = FALSE) +
+  geom_line(aes(group = embryo)) +
   scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
   scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
   labs(x = "status", y = "time after gastrulation (min)") +
-  #facet_grid(cols = vars(zygosity), scales = "free") +
-  facet_grid(cols = vars(status), rows = vars(stock), scales = "free_x") +
-  #facet_grid(rows = vars(stock), scales = "free") +
+  facet_grid(cols = vars(zygosity), scales = "free") +
   theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1)
         )
-ggsave("2-plots/gb_time_tf_buck_md_start_by_stock.png", width = 7, height = 12)
-ggsave("2-plots/gb_time_tf_buck_md_start_by_stock.svg", width = 7, height = 12)
+ggsave("2-plots/md_time_tf_buck_vs_md_start_by_zygosity.png", width = 12, height = 5)
+ggsave("2-plots/md_time_tf_buck_vs_md_start_by_zygosity.svg", width = 12, height = 5)
+```
+
+
+### Percentage of germ band extension at mitotic expansion vs ectopic folding by zygosity (cols)
+
+
+```{r plot-gb-pct-tf-buck-vs-md-start-by-zygosity}
+ggplot(mdlong[(mdlong$status %in% c("tf_buck", "md_start") & mdlong$stock != "prd"),], aes(status, gb_pct, fill = zygosity)) +
+  geom_boxplot(aes(color = zygosity), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
+  geom_point(alpha = 0.8, size = 3, show.legend = FALSE) +
+  geom_line(aes(group = embryo)) +
+  scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
+  labs(x = "status", y = "germ band extension (%)") +
+  facet_grid(cols = vars(zygosity), scales = "free") +
+  theme_classic(base_family = "DejaVu Sans") +
+  theme(text = element_text(size = 35),
+        strip.background = element_blank(),
+        panel.background = element_rect(colour = "black", size=1)
+        )
+ggsave("2-plots/gb_pct_tf_buck_vs_md_start_by_zygosity.png", width = 12, height = 5)
+ggsave("2-plots/gb_pct_tf_buck_vs_md_start_by_zygosity.svg", width = 12, height = 5)
 ```
 
 ## Statistical tests
@@ -459,16 +400,16 @@ ggsave("2-plots/gb_time_tf_buck_md_start_by_stock.svg", width = 7, height = 12)
 tests <- data.frame()
 
 # Contrasts of single variables within stocks (het vs hom)
-for (stock in unique(gblong$stock)) {
+for (stock in unique(mdlong$stock)) {
   
   if (stock == "wt") { next }
   
-  for (status in unique(gblong$status)) {
+  for (status in c("md_start", "md_split")) {
     
     for (value in c("gb_pct", "time")) {
       
-      het = gblong[(gblong$status == status & gblong$stock == stock & gblong$zygosity == "heterozygote"), value]
-      hom = gblong[(gblong$status == status & gblong$stock == stock & gblong$zygosity == "homozygote"), value]
+      het = mdlong[(mdlong$status == status & mdlong$stock == stock & mdlong$zygosity == "heterozygote"), value]
+      hom = mdlong[(mdlong$status == status & mdlong$stock == stock & mdlong$zygosity == "homozygote"), value]
       
       test = wilcox.test(het, hom, paired = FALSE)
       pvalue = test$p.value
@@ -495,9 +436,9 @@ for (stock in unique(gblong$stock)) {
 }
 
 # Contrasts between variables within zygosity (buck vs md)
-for (stock in unique(gblong$stock)) {
+for (stock in unique(mdlong$stock)) {
   
-  for (zygosity in unique(gblong$zygosity)) {
+  for (zygosity in unique(mdlong$zygosity)) {
     
     for (value in c("gb_pct", "time")) {
       
@@ -506,8 +447,8 @@ for (stock in unique(gblong$stock)) {
       if (stock != "wt" & zygosity == "wildtype") { next }
       
       # Note: with low n and all values from one contrast higher or lower than the other, pvalues might be identical
-      buck = gblong[(gblong$status == "tf_buck" & gblong$stock == stock & gblong$zygosity == zygosity), value]
-      md = gblong[(gblong$status == "md_start" & gblong$stock == stock & gblong$zygosity == zygosity), value]
+      buck = mdlong[(mdlong$status == "tf_buck" & mdlong$stock == stock & mdlong$zygosity == zygosity), value]
+      md = mdlong[(mdlong$status == "md_start" & mdlong$stock == stock & mdlong$zygosity == zygosity), value]
       
       test = wilcox.test(buck, md, paired = TRUE)
       pvalue = test$p.value
@@ -539,8 +480,8 @@ for (zygosity in c("heterozygote", "homozygote")) {
   for (value in c("gb_pct", "time")) {
     
     # Note: prd excluded because CF formation is not prevented
-    buck = gblong[(gblong$status == "tf_buck" & gblong$stock != "prd" & gblong$zygosity == zygosity), value]
-    md = gblong[(gblong$status == "md_start" & gblong$stock != "prd" & gblong$zygosity == zygosity), value]
+    buck = mdlong[(mdlong$status == "tf_buck" & mdlong$stock != "prd" & mdlong$zygosity == zygosity), value]
+    md = mdlong[(mdlong$status == "md_start" & mdlong$stock != "prd" & mdlong$zygosity == zygosity), value]
     
     test = wilcox.test(buck, md, paired = TRUE)
     pvalue = test$p.value
@@ -563,6 +504,13 @@ for (zygosity in c("heterozygote", "homozygote")) {
     tests <- rbind(tests, as.data.frame(t(test_row)))
   }
 }
+
+# Define factors for ordering
+tests$contrast = factor(tests$contrast, levels = c("het vs hom", "buck vs md"))
+tests$stock = factor(tests$stock, levels = c("wt", "btd", "eve", "prd", "btd+eve"))
+tests$status = factor(tests$status, levels = c("md_start", "md_split", "-"))
+tests$value = factor(tests$value, levels = c("time", "gb_pct"))
+tests <- tests[order(tests$contrast, tests$stock, tests$status, tests$value),]
 
 tests
 write.csv(tests, file = "tests.csv", row.names = FALSE)
